tests/gpu/check/illegal_mma_fill.co
// RUN: not choreo -t cute -arch=sm_86 %s 2>&1 | FileCheck %s

#include "choreo.h"


#define M 128
#define N 256
#define K 64

__co__ auto matmul(f16 [M, K] lhs, f16 [K, N] rhs) {
  f16 [M, N] output;

  int MMA_M = 8, MMA_N = 8, MMA_K = 4;
  parallel {m, n} by [M / MMA_M / 4, N / MMA_N ] : block {
    mc = mma.fill 0.0f;  // c = {0}
    parallel {g0, g1} by [4, 1]: group {
      mma.fill mc, 0.0f;
      foreach k in K / MMA_K {
        ma = mma.load lhs.chunkat(m#g0, k); // 8x4
        mb = mma.load rhs.chunkat(k, n#g1); // 4x8
        mma.fill ma, 0.0f;
        mma.row.col mc, ma, mb;   // row * col : c += a * b;;
      }
      mma.store mc, output.chunkat(m#g0, n#g1);
    };
  }
    

  return output;
}

// CHECK: error: Only the acc of mma operation can be used in fill op.
